[project]
name = "nebula-command"
version = "1.0.0"
description = "Mission-control interface for on-chain strategy intelligence"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.32",
    "pandas>=2.0",
    "numpy>=1.24",
    "plotly>=5.20",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
